fixed overflow problem with menu in annotator view

--- a/prototype/static/css/neonion.css
+++ b/prototype/static/css/neonion.css
@@ -453,10 +453,9 @@ background: rgba(0,0,0,0.9);
   body{ display: table; }
   .unit-20{ display: table-footer-group; }
   .unit-80{ display: table-header-group; }
+  .unit-60{ clear: both; }
   #help-link { position: inherit;  }
-  .annotator-nav{ position: inherit; display: block;}
+  .annotator-nav{ height: 3em; position: inherit; display: block;}
   .annotator-nav li{ float: left; }
-  #annotator_menu{
-    display: none;
-  }
+  #annotator_menu{ display: none; }
 }
